--- a/stylevid.css
+++ b/stylevid.css
@@ -39,7 +39,8 @@
     color:black;
     font-family: cursive;
     font-weight: 800; 
-    font-size: larger;
+    font-size: large;
+    border-radius: 5px;
     border: solid black 2px;
     border-collapse: collapse; 
     width:50px ;
@@ -48,7 +49,10 @@
 
     input[type="text"] 
     { 
-    background-color:burlywood; 
+    background-color:oldlace;
+    font-weight: 800; 
+    font-size: larger;
+    border-radius: 5px; 
     border: solid black 2px;
     border-collapse: collapse; 
     width:160px;
