--- a/stylevid.css
+++ b/stylevid.css
@@ -52,6 +52,7 @@
     background-color:oldlace;
     font-weight: 800; 
     font-size: larger;
+    font-family:cursive;
     border-radius: 5px; 
     border: solid black 2px;
     border-collapse: collapse; 
