--- a/stylevid.css
+++ b/stylevid.css
@@ -50,6 +50,7 @@
     input[type="text"] 
     { 
     background-color:oldlace;
+    color: black;
     font-weight: 800; 
     font-size: larger;
     font-family:cursive;
